cfn_benchmark/cfn_templates/wongcyrus__managed-aws-academy-learner-lab/cloudformation/ec2-linux/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: AWS Cloud9 Environment
Parameters:
  InstanceType:
    Description: EC2 instance type on which IDE runs
    Type:        String
    Default:     t2.micro
  KeyPairName:
    Type: String
  UriEncodedKeyMaterial:
    Type: String
  AmiId:
    Type: String
  PemKeyFileUrl:
    Type: String
  UserData:
    Type: String
    Default: ""
Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      SecurityGroups: [!Ref InstanceSecurityGroup]
      KeyName: !Ref KeyPairName
      ImageId: !Ref AmiId
      UserData:
        Fn::Base64:
          !Sub
            - |
               #!/bin/bash -x
                ${UserData}
                /opt/aws/bin/cfn-signal -e 0 --stack ${StackName} -r "EC2Instance" --region ${Region} ${WaitHandleHash}
            -
              WaitHandleHash:
                  Fn::Base64: !Ref WaitHandle
              StackName: !Ref AWS::StackName
              Region: !Ref AWS::Region
              UserData: !Ref UserData

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "0.0.0.0/0"

  WaitHandle:
    Type: AWS::CloudFormation::WaitConditionHandle
  WaitCondition:
    Type: AWS::CloudFormation::WaitCondition
    DependsOn: "EC2Instance"
    Properties:
      Handle:
        Ref: "WaitHandle"
      Timeout: "300"
      Count: 1

Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref EC2Instance
  AZ:
    Description: Availability Zone of the newly created EC2 instance
    Value: !GetAtt [EC2Instance, AvailabilityZone]
  PublicDNS:
    Description: Public DNSName of the newly created EC2 instance
    Value: !GetAtt [EC2Instance, PublicDnsName]
  PublicIP:
    Description: Public IP address of the newly created EC2 instance
    Value: !GetAtt [EC2Instance, PublicIp]
  PemKeyFileUrl:
    Value: !Sub '${PemKeyFileUrl}?KeyMaterial=${UriEncodedKeyMaterial}'
